--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -10,4 +10,9 @@
     <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="UseCase\Mercaderia\" />
+    <Folder Include="UseCase\Comanda\" />
+  </ItemGroup>
+
 </Project>
