--- a/TP2-REST-Scholz_Veronica/appsettings.Development.json
+++ b/TP2-REST-Scholz_Veronica/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
-  "ConnectionString": "Server=localhost,1433;Database=master;Trusted_Connection=True;TrustServerCertificate=True;",
+  "ConnectionString": "Server=localhost,1433;Database=TP2-REST-Scholz_Veronica;Trusted_Connection=True;TrustServerCertificate=True;",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
