--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -14,10 +14,10 @@ jobs:
     runs-on: windows-latest
     steps:
       - name: Set up JDK 11
-        uses: actions/setup-java@v3 #v1
+        uses: actions/setup-java@v1 #v3
         with:
-          java-version: 11 #1.11
-          distribution: 'zulu' # Alternative distribution options are available.
+          java-version: 1.11 #11
+          #distribution: 'zulu' # Alternative distribution options are available.
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
@@ -47,7 +47,7 @@ jobs:
         shell: powershell
         run: |
           .\.sonar\scanner\dotnet-sonarscanner begin /k:"veroyols_TP2-REST-Scholz_Veronica" /o:"proyectodesoftware" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
-          #<insert_your_clean_build_command>
+          
           dotnet restore
           dotnet build --no-restore
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
