--- a/TP2-REST-Scholz_Veronica/appsettings.json
+++ b/TP2-REST-Scholz_Veronica/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=TP2_REST_Scholz_Veronica;Username=postgres;Password=admin1234",
+    "SQLConnection": "Server=localhost,1433;Database=TP2-REST-Scholz_Veronica;Trusted_Connection=True;TrustServerCertificate=True;",
+    "SQLConnectionPass": "Server=localhost,1433;Database=TP2-REST-Scholz_Veronica; User Id=sa; Password=admin1234.; TrustServerCertificate=True;"
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
