--- a/TP2-REST-Scholz_Veronica/appsettings.Development.json
+++ b/TP2-REST-Scholz_Veronica/appsettings.Development.json
@@ -1,14 +1,11 @@
-//  "ConnectionString": "Server=localhost,1433;Database=TP2-REST-Scholz_Veronica;Trusted_Connection=True;TrustServerCertificate=True;",
-// "ConnectionString": "Server=localhost,1433;Database=TP2-REST-Scholz_Veronica; User Id=sa; Password=passw0rd1234.; TrustServerCertificate=True;",
 {
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "ConnectionsStrings": {
-    "DefaultConnection" : "Server=localhost,1433;Database=TP2-REST-Scholz_Veronica; User Id=sa; Password=passw0rd1234.; TrustServerCertificate=True;"
-
   }
+
+  //docker run --name TP2-REST-Scholz_Veronica -e POSTGRES_PASSWORD=456456 -d -p 5432:5432 postgres
 }
